--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -80,6 +80,7 @@
 .icon-happy:before { content: '\e84e'; } /* '' */
 .icon-evil:before { content: '\e84f'; } /* '' */
 .icon-cheers:before { content: '\e850'; } /* '' */
+.icon-down-bold:before { content: '\e851'; } /* '' */
 .icon-comment:before { content: '\e852'; } /* '' */
 .icon-peace:before { content: '\e853'; } /* '' */
 .icon-innocent:before { content: '\e854'; } /* '' */
