--- a/views/indexmin.html
+++ b/views/indexmin.html
@@ -203,7 +203,7 @@
               <div class="row-select mood" data-selectid="whatever">Whatever</div>
             </div>
           </div>
-          <div class="row-input row-input-md row-drink etiquette">
+          <div class="row-input row-input-md row-drink etiquette nonei">
             <label for="drink" class="label label-md" >Verre</label>
             <div class="row-select-wrap drink-wrap">
               <div class="row-select drink" data-selectid="water">Eau</div>
