--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?14590231');
-  src: url('../font/fontello.eot?14590231#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?14590231') format('woff'),
-       url('../font/fontello.ttf?14590231') format('truetype'),
-       url('../font/fontello.svg?14590231#fontello') format('svg');
+  src: url('../font/fontello.eot?27463734');
+  src: url('../font/fontello.eot?27463734#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?27463734') format('woff'),
+       url('../font/fontello.ttf?27463734') format('truetype'),
+       url('../font/fontello.svg?27463734#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?14590231#fontello') format('svg');
+    src: url('../font/fontello.svg?27463734#fontello') format('svg');
   }
 }
 */
@@ -135,6 +135,7 @@
 .icon-happy:before { content: '\e84e'; } /* '' */
 .icon-evil:before { content: '\e84f'; } /* '' */
 .icon-cheers:before { content: '\e850'; } /* '' */
+.icon-down-bold:before { content: '\e851'; } /* '' */
 .icon-comment:before { content: '\e852'; } /* '' */
 .icon-peace:before { content: '\e853'; } /* '' */
 .icon-innocent:before { content: '\e854'; } /* '' */
