--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -86,3 +86,4 @@
 .icon-innocent:before { content: '\e854'; } /* '' */
 .icon-drunk:before { content: '\e855'; } /* '' */
 .icon-horney:before { content: '\e856'; } /* '' */
+.icon-minus:before { content: '\e857'; } /* '' */
