--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1224,7 +1224,7 @@ body > header > h5 {
 
 .theme-btn {
    font-family: 'Karla';
-   padding: 7px 20px;
+   padding: 9px 20px;
    border: none;
    font-size: 14px;
    outline: none;
@@ -1232,10 +1232,12 @@ body > header > h5 {
    /* border-radius: 2px; */
    transition: all ease-out .3s;
    cursor: pointer;
+   text-transform: uppercase;
+   font-size: 11px;
 }
 
 .btn-cancel {
-   background-color: #D1D1D1;
+   background-color: #DEDEDE;
 }
 .btn-cancel:hover {
 	background: #E5E5E5;
