--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -217,7 +217,7 @@
               <!-- Dynamically loaded -->
             </div>
           </div>
-          <div class="row-input row-input-lg row-drink etiquette">
+          <div class="row-input row-input-lg row-drink etiquette nonei">
             <label data-lid="p_drink_label" for="drink" class="label label-md" >Verre</label>
             <div class="row-select-wrap drink-wrap">
               <!-- Dynamically loaded -->
@@ -277,7 +277,9 @@
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group filters-create-meefore">
-          <button data-lid="e_create_button" class="theme-btn btn-create-event right">Proposer un meefore</button>
+          <button class="theme-btn btn-create-event right">
+            <i class="icon icon-bar"></i><span data-lid="e_create_button">Proposer un meefore</span>
+          </button>
         </div>
       </div>
 
