--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,6 +109,11 @@ font-size: 14px;text-align: center;color: #ee;}
    left: 50%;
    transform: translate(-50%, 0);
 }
+.v-centered {
+   position: absolute;
+   top: 50%;
+   transform: translate(0, -50%);
+}
 
 .load-chat-history {
 	font-size: 10px;
