--- a/public/css/events.css
+++ b/public/css/events.css
@@ -835,23 +835,15 @@ margin-right: 20px;margin-left: 0;}
 .row-events-accepted-inview.validating .event-accepted-chat-messages .jspTrack {
 }
 .event-accepted-chat-typing {
-
-position: absolute;
-
-bottom: 0;
-
-left: 0;
-
-/* background: #FCFCFC; */
-
-border-top: 1px solid #eee;
-
-height: 42px;
-
-width: 100%;
-
-padding: 8px 0px 0 20px;
-
+position: absolute;
+bottom: 0;
+left: 0;
+/* background: #FCFCFC; */
+border-top: 1px solid #eee;
+height: 37px;
+width: 100%;
+padding: 8px 0px 0 20px;
+display: flex!important;
 }
 
 .event-accepted-chat-typing .btn-whisper {
@@ -866,44 +858,29 @@ padding: 8px 0px 0 20px;
 }
 
 .event-accepted-chat-typing input {
-
-position: relative;
-
-z-index: 2;
-
-background: #F5F5F5;
-
-padding: 6px 0 4px 10px;
-
-border-bottom: 1px solid #eee;
-
-width: 82%;
-
-color: #525252;
-
-font-family: 'Karla';
-
-font-size: 13px;
-
-transition: all ease-out .3s;
+position: relative;
+z-index: 2;
+background: #F5F5F5;
+padding: 6px 0 4px 10px;
+border-bottom: 1px solid #eee;
+width: 100%;
+color: #525252;
+font-family: 'Karla';
+font-size: 13px;
+transition: all ease-out .3s;
+order: 1;
+flex-grow: .2;
 }
 .event-accepted-chat-typing button {
-
-float: right;
-
-background: #E94F6A;
-
-border: 1px solid #E94F6A;
-
-border-bottom: 2px solid #BD4056;
-
-border-radius: 0px;
-
-color: white;
-
-font-size: 12px;
-
-text-transform: none;
+background: #E94F6A;
+border: 1px solid #E94F6A;
+border-bottom: 2px solid #BD4056;
+border-radius: 0px;
+color: white;
+font-size: 12px;
+text-transform: none;
+order: 2;
+padding-top: 6px;
 }
 
 .event-accepted-chat-typing button.active {
