--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -164,7 +164,7 @@
 
 .hero-header {font: bold 65px 'Alegreya Sans SC';text-align: center;color: white;}
 
-.hero-subheader {text-align: center;font: normal 25px 'Roboto';text-shadow: 0 1px 1px #575757;color: white;text-transform: none;margin-top: 15px;}
+.hero-subheader {text-align: center;font: normal 25px 'Lato';text-shadow: 0 1px 1px #575757;color: white;text-transform: none;margin-top: 15px;}
 
 .hero-languages {
    position: absolute;
