--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -44,7 +44,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-65278026-1', 'none');
-  ga('send', 'pageview');
+  ga('send', 'pageview', '/home');
 </script>
 
 </head>
