--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -29,7 +29,6 @@
   <link rel="stylesheet" href="/css/profile.css">
   <link rel="stylesheet" href="/css/events.css">
   <link rel="stylesheet" href="/css/create.css">
-  <link rel="stylesheet" href="/css/manage.css">
   <link rel="stylesheet" href="/css/search.css">
   <link rel="stylesheet" href="/css/chat.css">
   <link rel="stylesheet" href="/css/media.css">
@@ -190,7 +189,6 @@
         <li id="search" class="menu-item icon icon-search"><span class="underlay"></span>
           <div id="searchbar" class=""><input data-lid="h_search_placeholder" type="text" placeholder="Rechercher un membre" class="search-input"></div>
         </li>
-        <li id="management" class="menu-item icon icon-users" data-linkedcontent="#manageEventsWrap"><span class="underlay"></span></li>
         <li id="settings" data-hash="settings" class="right menu-item icon icon-cog" data-linkedcontent="#settingsWrap"><span class="underlay"></span></li>
       </ul>
     </div>
@@ -541,6 +539,7 @@
   <script src="js/src/languages/lj-country.js"></script>
   <script src="js/src/languages/lj-languages.js"></script>
   <script src="js/src/analytics/lj-analytics.js"></script>
+  <script src="js/src/intro/lj-intro.js"></script>
   <script src="js/src/init/lj-init.js"></script>
   <script src="js/src/lj-junk.js"></script>
 
