--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -14,7 +14,8 @@
   <link href='https://fonts.googleapis.com/css?family=Londrina+Solid' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Karla:700,400' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Gochi+Hand' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/joyride.css">
@@ -67,22 +68,118 @@
   <div class="progress_bar"></div>
   <div class="loaderWrap"></div>
   <div class="m-loaderWrap"></div>
-  <div class="overlay"></div>
-  <div id="logo-hero"><img src="/img/logomeefore.png" width="50" alt="Logo meefore soirées"></div>
-  <div class="hero-img scaled animatable img-4 "></div>
-  <div class="hero-img scaled animatable img-1 "></div>
-  <div class="hero-img scaled animatable img-2 "></div>
-  <div class="hero-img scaled animatable img-3 "></div>
-  <div class="hero-img scaled animatable img-0 "></div>
-  <div class="hero-img scaled animatable img-5 "></div>
-  <div class="hero-img scaled animatable img-6 "></div>
-  <div class="hero-img scaled animatable img-7 "></div>
   <div class="curtain"></div>
   <div class="modal-curtain"></div>
   <div class="modal-container super-centered none"><div class="modal-container-body"></div></div>
 
+
+  <!-- Landing Page Begin -->
+  
+  <div id="landingWrap">
+    
+    <header class="landing-header">
+      
+    </header>
+    <!-- landing front page -->
+    <div class="landing-front">
+
+      <!-- landing kenburns -->
+      <div class="landing-kenburns">
+      </div>
+      <!-- end landing kenburns -->
+
+      <!-- landing hero -->
+      <div class="landing-hero">
+        <div class="hero-logo">
+          <img src="/img/logo_white_on_pink_skew_fav.png" width="40" alt="Logo meefore soirées">
+        </div>
+        <div class="hero-languages">
+          <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
+          <span data-code="en" class="no-cb pick-lang hero-lang">EN</span>
+        </div>
+        <h1 class="hero-header">
+          Meefore
+        </h1>
+        <h2 data-lid="lp_subtitle" class="hero-subheader">
+          Rejoignez ou organisez des before avant d'aller en soirée.
+        </h2>
+        <div id="facebook_connect">
+          <i class="icon icon-facebook"></i>
+          <span data-lid="lp_conn_button">Connexion</span>
+          <div class="fb-overlay"></div>
+        </div>
+      </div>
+      <!-- end landing hero -->
+
+      <!-- moving arrow -->
+      <i class="icon moving-arrow icon-down-open-big"></i>
+      <!-- end Moving arrow -->
+
+       <!-- landing places -->
+      <div class="landing-places-wrap"><i class="icon icon-location"></i><span class="landing-places"></span></div>
+      <!-- end landing places  -->
+
+    </div>
+    <!-- end landing front page -->
+  
+  <div class="landing-divider"></div>
+
+    <!-- landing keypoints -->
+    <div class="landing-keypoints">
+      <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
+      <img class="keypoint-splitter" src="/img/splitter.png" alt="A nice splitter">
+      <div class="keypoint-wrap keypoint-1">
+        <div class="keypoint-img"><i class="icon icon-keypoint icon-group"></i></div>
+        <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
+        <p  data-lid="lp_key_friends_text" class="keypoint-body">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      </div
+      ><div class="keypoint-wrap keypoint-2">
+        <div class="keypoint-img"><i class="icon icon-keypoint icon-relation"></i></div>
+        <div  data-lid="lp_key_people_title" class="keypoint-head">...des rencontres...</div>
+        <p  data-lid="lp_key_people_text" class="keypoint-body">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      </div
+      ><div class="keypoint-wrap keypoint-3">
+        <div class="keypoint-img"><i class="icon icon-keypoint icon-glass"></i></div>
+        <div data-lid="lp_key_party_title" class="keypoint-head">...et la soirée !</div>
+        <p data-lid="lp_key_party_text" class="keypoint-body">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      </div>
+    </div>
+
+    <div class="landing-divider"></div>
+
+    <!-- end landing keypoints -->
+    <div class="landing-map">
+      <div class="landing-map-overlay"></div>
+      <button data-lid="lp_map_button" class="landing-map-button super-centered">Voir les <span>before</span>meefore</button>
+    </div>
+  
+    <!-- landing footer -->
+    <footer class="landing-footer">
+      <div data-lid="lp_footer_followus" class="footer-followus">
+        Nous suivre
+      </div>
+      <div class="footer-socials">
+        <a href="https://www.facebook.com/meefore" target="_blank"><i class="icon icon-facebook"></i></a>
+        <a href="https://www.facebook.com/meefore" target="_blank"><i class="icon icon-twitter"></i></a>
+        <a href="https://www.facebook.com/meefore" target="_blank"><i class="icon icon-instagram"></i></a>
+        <a href="https://www.facebook.com/meefore" target="_blank"><i class="icon icon-youtube"></i></a>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="footer-list">
+        <ul>
+          <li class="footer-list-item"><a href="/legals" target="_blank" >Mentions légales</a></li>
+          <li class="footer-list-item"><a id="contact" >Contact</a></li>
+        </ul>
+      </div>
+    </footer>
+    <!-- end landing footer -->
+  </div>
+  
+  <!-- Landing Page End -->
+
+
   <!-- Header start -->
-  <header class="lg-header none">
+  <header id="#mainHeader" class="lg-header none">
     <div id="headerContent">
     <div class="preview-type beta">bêta</div>
       <img id="logo" src="/img/logomeefore.png" width="48"></img>
@@ -93,7 +190,6 @@
           <div id="searchbar" class=""><input data-lid="h_search_placeholder" type="text" placeholder="Rechercher un membre" class="search-input"></div>
         </li>
         <li id="settings" data-hash="settings" class="right menu-item icon icon-cog" data-linkedcontent="#settingsWrap"><span class="underlay"></span></li>
-        <li id="contact" class="right menu-item icon icon-mail-alt nonei" data-linkedcontent="#contactWrap"><span class="underlay"></span></li>
       </ul>
     </div>
     <div id="languages">
@@ -105,26 +201,7 @@
 
   <div id="mainWrap" class="centered">
 
-    <!-- Landing page start -->
-    <section id="landingWrap" class="centered revealed m-revealed">
-      <div class="landing-content">
-        <h2 class="landing-places">
-          <span class="typed-text"></span>
-        </h2>
-        <div class="landing-hashtags">
-          <!-- Dynamically loaded -->
-        </div>
-        <div class="landing-call">
-          "Une vraie soirée commence toujours avant la soirée."
-        </div>
-        <div class="landing-subscribe">
-          <div id="facebook_connect"><i class="icon icon-facebook"></i>Connexion
-            <div class="fb-overlay"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Landing page end -->
+  
 
     <section id="thumbWrap" class="none ">
       <div class="imgWrap">
@@ -402,25 +479,41 @@
   </div>
   
   <script id="app_ids"> 
-    window.facebook_app_id = "1638108873141834";
-    window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
+     window.facebook_app_id = "1638108873141834";
+     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
 
   <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
-  <script src="dist/lib.js"></script>
+  <script src="js/lib/lodash.js"></script>
+  <script src="js/lib/mousetrap.js"></script>
+  <script src="js/lib/jquery.js"></script>
   <script src="js/lib/pikaday.js"></script>
+  <script src="js/lib/joyride.js"></script>
+  <script src="js/lib/jscrollpane.js"></script>
+  <script src="js/lib/jquery.cloudinary.js"></script>
+  <script src="js/lib/jquery.typeahead.js"></script>
+  <script src="js/lib/typed.js"></script>
+  <script src="js/lib/waitForImages.min.js"></script>
+  <script src="js/lib/velocity.min.js"></script>
+  <script src="js/lib/velocityui.min.js"></script>
+  <script src="js/lib/moment.min.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
   <script src="js/lib/rangeslider.js"></script>
   <script src="js/lib/async.min.js"></script>
   <!-- <script src="js/lib/prefixfree.min.js"></script> -->
+  <script src="js/lib/md5.min.js"></script>
+  <script src="js/lib/jquery.parallax.js"></script>
+  <script src="js/lib/kenburns.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
   <script src="js/src/lj-params.js"></script>
+  <script src="js/src/router/lj-router.js"></script>
   <script src="js/src/languages/lj-textsource.js"></script>
   <script src="js/src/lj-helpers.js"></script>
   <script src="js/src/tpl/lj-render-profile.js"></script>
+  <script src="js/src/tpl/lj-render-landing.js"></script>
   <script src="js/src/tpl/lj-render-user-profile.js"></script>
   <script src="js/src/tpl/lj-render-create.js"></script>
   <script src="js/src/tpl/lj-render-event.js"></script>
@@ -445,7 +538,8 @@
   <script src="js/src/errors/lj-errors.js"></script>
   <script src="js/src/languages/lj-country.js"></script>
   <script src="js/src/languages/lj-languages.js"></script>
-  <script src="js/src/router/lj-router.js"></script>
+  <script src="js/src/analytics/lj-analytics.js"></script>
+  <script src="js/src/intro/lj-intro.js"></script>
   <script src="js/src/init/lj-init.js"></script>
   <script src="js/src/lj-junk.js"></script>
 
