--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,6 +80,13 @@ font-size: 14px;text-align: center;color: #ee;}
    transition: all ease-out .3s!important;
 }
 
+.no-select {
+	-webkit-user-select: none;/* Chrome all / Safari all */
+    -moz-user-select: none;/* Firefox all */
+    -ms-user-select: none;/* IE 10+ */
+    user-select: none;
+}
+
 .visible {
    display: block!important;
 }
@@ -231,7 +238,7 @@ body header.lg-header,
 body header.sm-header {
    width: 100%;
    height: 42px;
-   background-image: url('/img/texture-png2.png');
+   background-image: url('/img/app/darkpattern.png');
    box-shadow: 0 0 5px rgb(37, 37, 37);
    position: fixed;
    top: 0;
@@ -285,7 +292,7 @@ body > header > h5 {
 
 #mainWrap {
    width: 100%;
-   /* background: url('/img/crossword.png'); */
+   background: url('/img/app/crossword.png');
    margin-top: 0;
    min-height: 100vh;
    box-sizing: border-box;
