--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -91,7 +91,7 @@
       <!-- landing hero -->
       <div class="landing-hero">
         <div class="hero-logo">
-          <img src="/img/logo_white_on_pink_skew_fav.png" width="40" alt="Logo meefore soirées">
+          <img src="/img/app/logo.png" width="50" alt="Logo meefore soirées">
         </div>
         <div class="hero-languages">
           <span data-code="fr" class="no-cb pick-lang hero-lang active">FR</span>
@@ -127,7 +127,7 @@
     <!-- landing keypoints -->
     <div class="landing-keypoints">
       <div data-lid="lp_key_title" class="keypoint-message">L'indispensable mix d'un before réussi</div>
-      <img class="keypoint-splitter" src="/img/splitter.png" alt="A nice splitter">
+      <img class="keypoint-splitter" src="/img/app/splitter.png" alt="A nice splitter">
       <div class="keypoint-wrap keypoint-1">
         <div class="keypoint-img"><i class="icon icon-keypoint icon-group"></i></div>
         <div data-lid="lp_key_friends_title" class="keypoint-head">Les amis...</div>
@@ -182,8 +182,8 @@
   <header id="#mainHeader" class="lg-header none">
     <div id="headerContent">
     <div class="preview-type beta">bêta</div>
-      <img id="logo" src="/img/logomeefore.png" width="48"></img>
-      <ul id="menuWrap" class="">
+      <img id="logo" src="/img/app/logo-light.png" width="48"></img>
+      <ul id="menuWrap" class="no-select">
         <li id="profile" data-hash="me" class="menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span class="underlay"></span></li>
         <li id="events" data-hash="events" class="menu-item icon icon-glass" data-linkedcontent="#eventsWrap"><span class="underlay"></span></li>
         <li id="search" class="menu-item icon icon-search"><span class="underlay"></span>
