--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -66,6 +66,7 @@
   <!-- Overlay, loader arrows & admin panel -->
   <div id="adminPanelWrap"></div>
   <div class="progress_bar"></div>
+  <div class="progress_bar--landing"></div>
   <div class="loaderWrap"></div>
   <div class="m-loaderWrap"></div>
   <div class="curtain"></div>
