--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -348,8 +348,8 @@
       <div class="row row-events row-events-filters">
         <div class="row-events-filters-group">
           <i class="icon icon-filters-group icon-location"></i>
-          <div class="event-filter-label">Changer d'endroit : </div>
-          <input id="moveAround" type="text" placeholder="Paris, Londres..." >
+          <div data-lid="e_filters_location" class="event-filter-label">Changer d'endroit : </div>
+          <input id="moveAround" type="text" placeholder="Paris, Madrid..." >
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group filters-create-meefore">
