--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -17,8 +17,8 @@
   <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/joyride.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css"> 
+  <link rel="stylesheet" href="/css/joyride.css"> 
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/jscrollpane.css">
   <link rel="stylesheet" href="/css/fontello/css/fontello.css">
@@ -366,7 +366,7 @@
               <!-- Dynamically loaded -->
         </div>
         <div class="row-events-map">
-          <!-- Dynamically loaded -->
+          <!-- Dynamically loadedd-->
         </div>
       </div>
 
